
i18n
	Added: i18n_getJsTranslations() function which allow to translate JS scripts
	Added: New languages: Breton, Czech, Icelandic and Georgian (Requested languages)
	Fixed: Don't throw any exception when a locale is not valid. Fallback to the default locale instead

PLUGINS
	Fixed: PHP Notice: Undefined index: prirotiy in /var/www/imscp/gui/library/iMSCP/Plugin/Manager.php on line 1390

VENDOR
	Added: pGenerator jQuery plugin v1.0.0

TICKETS
	Fixed #1187: Enhancement - Password generator for any password field
	Fixed #1188: Bug - apache_fcgid - Fcgid wrapper not created in some contexts
	Fixed #1191: Bug - Domains which belong to disabled accounts are no longer reachable after an i-MSCP reconfiguration
	Fixed #1192: Bug - Network manager - Server connection lost
	Fixed #1194: Enhancement - Allowed character range for TXT DNS resource records

------------------------------------------------------------------------------------------------------------------------
1.1.18
------------------------------------------------------------------------------------------------------------------------

2014-11-22: Laurent Declercq
	RELEASE i-MSCP 1.1.18

ENGINE
	Fixed: Unable to remove the domain aliases and the subdomains ( Web folder protection )

GUI
	Added: iMSCP_Events_Aggregator::getEventManager() method
	Changed: Configuration objects are now cached for better performances
	Changed: Mail body footprints are now stored in flat file instead of database ( Exception mail writer )
	Changed: Mails are now sent every 24 hours in context of an identical exception ( Exception mail writer )
	Changed: Writers are now lazy-loaded ( Exception writers )
	Fixed: Ignore orphaned admin entries ( customer ) in generate_reseller_user_props() function
	Fixed: The MAIL_WRITER_EXPIRY_TIME configuration parameter is not honored ( Exception mail writer )
	Fixed: Undefined sSearch index in admin_log.php
	Fixed: Useless initialization routines in context of the AJAX requests ( Initializer )